package lowleveldesign.tictactoe.enums;

public enum GameStatus {

    IN_PROGRESS,
    WINNER_X,
    WINNER_O,
    DRAW;
}
