package lowleveldesign.tictactoe.enums;

public enum Symbol {

    X('X'),
    O('O'),
    EMPTY('_');

    private final char value;

    Symbol(char value){
        this.value = value;
    }

    public char getValue(){
        return this.value;
    }

}
