package lowleveldesign.tictactoe.observer;

import lowleveldesign.tictactoe.entities.Game;

import java.util.ArrayList;
import java.util.List;

public abstract class GameSubject{

    private final List<GameObserver> gameObservers = new ArrayList<>();

    public void addObserver(GameObserver gameObserver){
        this.gameObservers.add(gameObserver);
    }

    public void removeObserver(GameObserver gameObserver){
        this.gameObservers.remove(gameObserver);

    }


    public void notifyObservers(){

        for (GameObserver gameObserver: gameObservers) {
            gameObserver.update((Game) this);
        }
    }
}
